<resources>
    <string name="app_name">MovieTestApp</string>
    <string name="transition_name_logo">logo</string>
    <string name="transition_name_title">title</string>
    <string name="transition_name_search">search</string>

    <!--  Dialogs  -->
    <string name="alert_no_internet_title">No Internet Connection</string>
    <string name="alert_no_internet_message">Make sure that Wi-Fi or mobile data is turned on, then pull to refresh.</string>
    <string name="alert_retry_message">Make sure that Wi-Fi or mobile data is turned on, then try again.</string>
    <string name="alert_refresh">Refresh</string>
    <string name="alert_ok">OK</string>

    <!--  Info messages  -->
    <string name="error_no_data">Something went wrong. Try to refresh the page.</string>
    <string name="error_no_more_movies">No more movies to load.</string>

    <!--  Main Activity  -->
    <string name="release_date">Release date:\n%s</string>
    <string name="popularity">Popularity: %s</string>
    <string name="genre_not_specified">[genre not specified]</string>

    <!--  Details Activity  -->
    <string name="original_title">Original title:</string>
    <string name="original_language">Original language:</string>
    <string name="adult">For adults:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <!--  Search Activity  -->
    <string name="search_hint">Type movie name</string>
    <string name="start_search">Click on search button to start searching</string>
    <string name="provide_query">Query must be provided</string>
    <string name="no_movie_by_query">No movies found by this query</string>
</resources>
