<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="?actionBarSize"
            android:layout_height="?actionBarSize"
            android:layout_marginStart="@dimen/dim_medium"
            android:src="@drawable/ic_logo"
            android:transitionName="@string/transition_name_logo" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dim_medium"
            android:transitionName="@string/transition_name_search"
            app:queryHint="@string/search_hint" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/sr_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="always"
                android:paddingStart="@dimen/dim_medium"
                android:paddingEnd="@dimen/dim_medium" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/tv_message"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dim_large"
            android:layout_marginEnd="@dimen/dim_large"
            android:gravity="center"
            android:text="@string/start_search"
            android:textColor="@color/color_secondary_text" />

    </FrameLayout>

</LinearLayout>