<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary_light"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_poster"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/size_logo"
        android:layout_height="@dimen/size_logo"
        android:layout_gravity="center|bottom"
        android:alpha="0.4"
        android:src="@drawable/ic_logo"
        android:transitionName="@string/transition_name_logo" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_gravity="center|top"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:transitionName="@string/transition_name_title"
        tools:text="Film name" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_overview"
                style="@style/SubTitleTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_large"
                android:layout_marginEnd="@dimen/dim_large"
                android:layout_marginBottom="@dimen/dim_small"
                android:gravity="center"
                android:textColor="@color/color_primary_dark"
                tools:text="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_large"
                android:layout_marginEnd="@dimen/dim_large"
                android:layout_marginBottom="@dimen/dim_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubTitleTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/original_title" />

                <TextView
                    android:id="@+id/tv_original_title"
                    style="@style/TextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    tools:text="orig title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_large"
                android:layout_marginEnd="@dimen/dim_large"
                android:layout_marginBottom="@dimen/dim_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubTitleTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/original_language" />

                <TextView
                    android:id="@+id/tv_original_language"
                    style="@style/TextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    tools:text="uk" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dim_large"
                android:layout_marginEnd="@dimen/dim_large"
                android:layout_marginBottom="@dimen/dim_small"
                android:orientation="horizontal">

                <TextView
                    style="@style/SubTitleTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/adult" />

                <TextView
                    android:id="@+id/tv_adult"
                    style="@style/TextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    tools:text="yes" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>